--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,35 @@
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+ html, body{
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+ }
+ body{/*Configuração importante para alinhamneto e posicionamento de fundo de tela*/
+    background: url('../imagens/fundo-madeira.jpg');
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+ }
+ main{
+    position: relative;
+    height: 100vh;
+ }
+ #telefone{
+    position: absolute;
+    height: 302px;
+    width: 150px;
+    background: url('../imagens/frame-iphone-pq.png');
+    background-repeat: no-repeat;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+ }
+ #tela{/*Aqui foram feitas todas as configurações para que a imagem de fundo do celular coubese extamente na tela e também configurado com 'background-size:cover' na pagina 'home.html'*/
+    position: relative;
+    top: 39px;
+    left: 11px;
+    width: 127px;
+    height: 226px;
+ }
